--- a/src/components/HeroSeventhPage.astro
+++ b/src/components/HeroSeventhPage.astro
@@ -11,12 +11,12 @@ import astrix from "../../public/assets/whiteAsterisk.png"
                     <p class=" text-[2rem] md:text-[1.2rem] font-bold leading-[100%] mb-2 md:mb-2 text-[#ff6d00]">
                         Platform discovery matters
                     </p>
-                    <p class=" text-[1.1rem] font-semibold leading-[100%] w-[70%] text-white/70">
-                        Your website, product, or branding is the first interaction potential customers have with your business.A professional design creates a strong, positive first impression, leading to increased trust and credibility.
+                    <p class=" text-[0.9rem] font-semibold leading-[100%] w-[70%] text-white/70">
+                        Platform discovery is a crucial and ongoing process in contact center transformation, helping organizations assess their current technology and identify improvement areas. CXPoint's SaaS discovery offers automated insights for legacy platform analysis, ensuring alignment with business goals. This approach supports a smooth transition, minimizes disruption, and fosters faster adoption​
                     </p>
                 </div>
                 <div class="flex flex-col">
-                    <p class="font-new statistics mt-8 ">
+                    <p class="font-new statistics mt-8 2xl:mt-0 ">
                         75 % 
                     </p>
                     <p class="text-[#E7E7D6] text-[2rem] font-bold leading-[100%]">
@@ -42,12 +42,12 @@ import astrix from "../../public/assets/whiteAsterisk.png"
                     <p class="text-[#ff6d00] text-[2rem] md:text-[1.2rem] font-bold leading-[100%] mb-2 md:mb-2">
                         Effort-free excellence for Contact centers via AI based automation
                     </p>
-                    <p class="text-white/70 text-[1.1rem] font-semibold leading-[100%] w-[70%] ">
-                        Effective branding distinguishes your business from competitors, creating a unique identity that resonates with your target audience.This fosters customer loyalty and trust, setting your brand apart in the market.
+                    <p class="text-white/70 text-[0.9rem] font-semibold leading-[100%] w-[70%] ">
+                        Contact centers requires continuous management and maintenance of the platform which requires multiple niche skills with blend of the technology and workforce. With use of AI, day to day operations of the contact centers can be efficiently automated, giving more control to users (regardless of technical skills) and resulting into huge saving by integrating with CXPoint cloud contact center products. 
                     </p>
                 </div>
                 <div class="flex flex-col">
-                    <p class="font-new statistics mt-8">
+                    <p class="font-new statistics mt-8 2xl:mt-0">
                         3-5 x
                     </p>
                     <p class="text-[#E7E7D6] text-[2rem] font-bold leading-[100%]">
@@ -82,11 +82,11 @@ import astrix from "../../public/assets/whiteAsterisk.png"
                     10 x
                 </p>
                 <p class="text-[#E7E7D6] text-[2rem] font-bold leading-[100%]">
-                    of customers prefer businessess with seamless intiuitive UX
+                    Boost of user productivity across Contact Center Ecosystem
                 </p>
             </div>
             <p class="w-[80%]  text-[1.1rem] font-semibold leading-[100%] text-white/70 mt-10">
-                Positive UX leads to higher satisfaction levels, as users find it easier to navigate and achieve their goals on the site
+                Unlock your potential and boost efficiency—our product empowers you to achieve more with less effort, transforming your productivity every day.​
             </p>
         </div>
         <div class="w-[50%] h-full bg-[#1E1E1D] p-14 md:flex hidden items-start justify-end pt-24">
