--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -19,22 +19,22 @@
         <!-- Column 1 -->
         <div class="space-y-4">
           <a href="/" class="block hover:text-gray-300">Home</a>
-          <a href="/products" class="block hover:text-gray-300">Products</a>
-          <a href="/company" class="block hover:text-gray-300">About Us</a>
-          <a href="/company#contact" class="block hover:text-gray-300">Contact Us</a>
-          <a href="/company#locations" class="block hover:text-gray-300">Locations</a>
-          <a href="/resources" class="block hover:text-gray-300">Resources</a>
+          <a href="#" class="block hover:text-gray-300">Products</a>
+          <a href="#" class="block hover:text-gray-300">About Us</a>
+          <a href="#" class="block hover:text-gray-300">Contact Us</a>
+          <a href="#" class="block hover:text-gray-300">Locations</a>
+          <a href="#" class="block hover:text-gray-300">Resources</a>
         </div>
         
         <!-- Column 2 -->
         <div class="space-y-4">
-          <a href="/policy" class="block hover:text-gray-300">Privacy Statement</a>
-          <a href="/termsofservice" class="block hover:text-gray-300">Terms Of Service</a>
-          <a href="/security" class="block hover:text-gray-300">Security Policy</a>
-          <a href="/accessibility" class="block hover:text-gray-300">Accessibility Statement</a>
-          <a href="/cookies" class="block hover:text-gray-300">Cookie Policy</a>
-          <a href="/cookiepreferences" class="block hover:text-gray-300">Cookie Preferences</a>
-          <a href="/sitemap" class="block hover:text-gray-300">Sitemap</a>
+          <a href="#" class="block hover:text-gray-300">Privacy Statement</a>
+          <a href="#" class="block hover:text-gray-300">Terms Of Service</a>
+          <a href="#" class="block hover:text-gray-300">Security Policy</a>
+          <a href="#" class="block hover:text-gray-300">Accessibility Statement</a>
+          <a href="#" class="block hover:text-gray-300">Cookie Policy</a>
+          <a href="#" class="block hover:text-gray-300">Cookie Preferences</a>
+          <a href="#" class="block hover:text-gray-300">Sitemap</a>
         </div>
       </div>
       
