--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -42,9 +42,9 @@ import ContactForm from '../components/ContactForm.astro';
 					<source src="/assets/heroVideo2.mp4" type="video/mp4" />
 					Your browser does not support the video tag.
 				</video>
-				<div class="absolute top-[48%] md:top-[48%] left-[50%] md:left-[36%] xl:left-[36%] 2xl:left-[36%] 3xl:left-[33%] transform -translate-x-1/2 -translate-y-1/2 pointer-events-none z-100 ">
+				<div class="absolute top-[48%] md:top-[48%] left-[50%] md:left-[36%] xl:left-[36%] 2xl:left-[36%] 3xl:left-[35%] transform -translate-x-1/2 -translate-y-1/2 pointer-events-none z-100 ">
 					<div class="flex flex-col items-center justify-center">
-						<div class="flex flex-col md:flex-row items-center justify-start gap-2 md:gap-4 h-full" >
+						<div class="flex flex-col md:flex-row items-center justify-start gap-2 md:gap-4 h-full lg:w-full" >
 							<svg width="10%" height="10%" viewBox="0 0 56 62" fill="none" xmlns="http://www.w3.org/2000/svg" class="astrix opacity-0 md:w-[6%] md:h-[6%]">
 								<path d="M25.39 61.3035V34.7442L2.50559 47.9404L0 43.9314L23.0515 30.5682L0 17.3721L2.50559 13.1961L25.39 26.5593V0H30.2342V26.3923L53.1186 13.1961L55.4571 17.3721L32.5727 30.5682L55.4571 43.9314L53.1186 47.9404L30.2342 34.7442V61.3035H25.39Z" fill="white"></path>
 							</svg>
