--- a/src/components/HeroSeventhPage.astro
+++ b/src/components/HeroSeventhPage.astro
@@ -23,7 +23,7 @@ import astrix from "../../public/assets/whiteAsterisk.png"
                         of discovery effort are highly depended on technical system and insights
                     </p>
                 </div>
-                <p class="w-[80%] text-[1.1rem] font-semibold leading-[100%] text-white/70 mt-10">
+                <p class="w-[80%] text-[1.1rem] font-semibold leading-[100%] text-white/70 mt-10 hidden lg:block">
                     Discover smarter, not harder—our product discovery tool reduces the effort of finding the right solutions insight, helping you make informed decisions faster
                 </p>
             </div>
@@ -54,7 +54,7 @@ import astrix from "../../public/assets/whiteAsterisk.png"
                         Higher effort Savings on Contact center operations 
                     </p>
                 </div>
-                <p class="w-[80%] text-[1.1rem] font-semibold leading-[100%] text-white/70 mt-10">
+                <p class="w-[80%] text-[1.1rem] font-semibold leading-[100%] text-white/70 mt-10 hidden lg:block">
                     Save time, save effort—our product streamlines your workflow, making every task easier and more efficient.
                 </p>
             </div>
@@ -73,7 +73,7 @@ import astrix from "../../public/assets/whiteAsterisk.png"
                 <p class="text-[#ff6d00] text-[2rem] md:text-[1.2rem] font-bold leading-[100%] mb-2 md:mb-2">
                     Improved Xperience and productivity across Contact Center Ecosystem
                 </p>
-                <p class=" text-[1.1rem] font-semibold leading-[100%] w-[100%] text-white/70">
+                <p class=" text-[1.1rem] font-semibold leading-[100%] w-[100%] text-white/70 ">
                     Good experience across Contact center Ecosystem is essential element for Agents, supervisors, business users, developers all across as well as for customer. A well-designed AI based application will ensures ease of use, accessibility, improved outcomes, reduced operations time, boost user productivity on Contact center platform and faster market value realization
                 </p>
             </div>
@@ -81,11 +81,11 @@ import astrix from "../../public/assets/whiteAsterisk.png"
                 <p class="font-new statistics ">
                     10 x
                 </p>
-                <p class="text-[#E7E7D6] text-[2rem] font-bold leading-[100%]">
+                <p class="text-[#E7E7D6] text-[2rem]  font-bold leading-[100%]">
                     Boost of user productivity across Contact Center Ecosystem
                 </p>
             </div>
-            <p class="w-[80%]  text-[1.1rem] font-semibold leading-[100%] text-white/70 mt-10">
+            <p class="w-[80%]  text-[1.1rem] font-semibold leading-[100%] text-white/70 mt-10 hidden lg:block">
                 Unlock your potential and boost efficiency—our product empowers you to achieve more with less effort, transforming your productivity every day.​
             </p>
         </div>
@@ -119,7 +119,13 @@ import astrix from "../../public/assets/whiteAsterisk.png"
 
     @media screen and (max-width: 768px) {
         .statistics{
-            font-size: 10rem;
+            font-size: 15rem;
+        }
+    }
+
+    @media screen and (min-width: 1024px) and (max-width: 1500px) {
+        .statistics{
+            font-size: 18rem;
         }
     }
 
