--- a/src/components/ContactForm.astro
+++ b/src/components/ContactForm.astro
@@ -97,7 +97,7 @@ const licenseOptions = ['Free Trial', 'CX1', 'CX2', 'CX3'];
           <label class="block text-sm font-bold text-gray-700 mb-2">
             License Type
           </label>
-          <div class="grid grid-cols-4 gap-4">
+          <div class="grid grid-cols-2 gap-4 sm:grid-cols-4">
             {licenseOptions.map((option) => (
               <div class="flex items-center">
                 <input
@@ -137,7 +137,7 @@ const licenseOptions = ['Free Trial', 'CX1', 'CX2', 'CX3'];
         <div>
           <button
             type="submit"
-            class="w-[20%] flex justify-center py-3 px-4 border border-transparent rounded-full shadow-sm text-sm font-medium text-white bg-[#FF6D00] focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500"
+            class="lg:w-[20%] flex justify-center py-3 px-4 border border-transparent rounded-full shadow-sm text-sm font-medium text-white bg-[#FF6D00] focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500"
           >
             Send Message
           </button>
