--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -10,10 +10,10 @@ const { title } = Astro.props;
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/assets/LogoBlack.png" />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
-    <title>Your Site Title</title>
+    <title>CXPOINT</title>
     
 	<!--grotest font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
