--- a/src/pages/security/index.astro
+++ b/src/pages/security/index.astro
@@ -38,10 +38,7 @@ const securityData = [
                     <h1 class="text-4xl md:text-7xl font-bold mb-6 new text-center">Security Policy</h1>
                     <p class="text-gray-600 mb-4 lg:mt-20">Effective Date: March 15, 2024</p>
                     <p class="text-lg leading-relaxed">
-                        CXPoint is committed to ensuring the security of your personal and financial information. 
-                        This Security Policy outlines the measures we take to protect your data and how we manage 
-                        potential security threats. We prioritize the protection of your information through 
-                        comprehensive security measures and continuous monitoring.
+                        These security terms for Cloud Services (“Cloud Security Terms”) form part of agreement between Customer and CXPoint for the supply of the Cloud Services (“Master Agreement”). These Cloud Security Terms set out the security and compliance posture related to the provision by CXPoint of the product services that Customer has purchased from CXPoint pursuant to the Master Agreement. These Cloud Security Terms are applicable to the extent that CXPoint has access and control over Customer Data, as defined below. For avoidance of doubt, these Cloud Security Terms do not apply to applications purchased via the AppFoundry Marketplace (even if such application is created by CXPoint) or to CXPoint Professional Services. 
                     </p>
                 </div>
 
