--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -30,7 +30,7 @@
         <div class="space-y-4">
           <a href="#" class="block hover:text-gray-300">Privacy Statement</a>
           <a href="#" class="block hover:text-gray-300">Terms Of Service</a>
-          <a href="#" class="block hover:text-gray-300">Security Policy</a>
+          <a href="/security" class="block hover:text-gray-300">Security Policy</a>
           <a href="#" class="block hover:text-gray-300">Accessibility Statement</a>
           <a href="#" class="block hover:text-gray-300">Cookie Policy</a>
           <a href="#" class="block hover:text-gray-300">Cookie Preferences</a>
