--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -32,7 +32,7 @@
           <a href="#" class="block hover:text-gray-300">Terms Of Service</a>
           <a href="/security" class="block hover:text-gray-300">Security Policy</a>
           <a href="#" class="block hover:text-gray-300">Accessibility Statement</a>
-          <a href="#" class="block hover:text-gray-300">Cookie Policy</a>
+          <a href="/cookies" class="block hover:text-gray-300">Cookie Policy</a>
           <a href="#" class="block hover:text-gray-300">Cookie Preferences</a>
           <a href="#" class="block hover:text-gray-300">Sitemap</a>
         </div>
