Comment out pages

--- a/src/pages/resources/index.astro
+++ b/src/pages/resources/index.astro
@@ -25,7 +25,7 @@ import { carouselData } from "../../data/carouselData.js";
 
 
 <Layout title="CX-Point">
-
+<!-- 
     <div class="w-screen h-full bg-[#E7E7D6]">
 
         <Navbar2/>
@@ -202,11 +202,20 @@ import { carouselData } from "../../data/carouselData.js";
 
         </div>
 
+        </div> -->
+        <div class="w-full min-h-screen flex items-center justify-center bg-[#E7E7D6]">
+            <div class="text-center">
+                <h1 class="text-4xl md:text-6xl lg:text-8xl font-bold akira mb-4">
+                    Realising Soon
+                </h1>
+                <p class="text-lg md:text-xl text-gray-600">
+                    We're working on something exciting. Stay tuned!
+                </p>
+            </div>
         </div>
-
         <Footer/>
 
-    </div>
+    <!-- </div> -->
 
 </Layout>
 
