--- a/src/components/HeroSeventhPage.astro
+++ b/src/components/HeroSeventhPage.astro
@@ -123,6 +123,12 @@ import astrix from "../../public/assets/whiteAsterisk.png"
         }
     }
 
+    @media screen and (min-width: 320px) and (max-width: 376px) {
+        .statistics{
+            font-size: 12rem;
+        }
+    }
+
     @media screen and (min-width: 1024px) and (max-width: 1500px) {
         .statistics{
             font-size: 18rem;
