--- a/src/components/StackingCardsHero.astro
+++ b/src/components/StackingCardsHero.astro
@@ -113,13 +113,13 @@ import * as Icon from '@astropub/icons'
             height: 200px;
         }
     }
-    .footer {
-        width: 100%;
-        height: 30vh;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        color: #fff;
+
+    /* Add new media query for smaller screens */
+    @media screen and (min-width: 320px) and (max-width: 376px) {
+        .img {
+            width: 350px;
+            height: 150px;
+        }
     }
 
     .footer h1 {
