--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,8 +13,9 @@ import CTAPage from '../components/CTAPage.astro';
 import Footer from '../components/Footer.astro';
 import StackingCardsHero from '../components/StackingCardsHero.astro';
 import ContactForm from '../components/ContactForm.astro';
----
 
+---
+<!--home page -->
 <Layout title="CX-Point">
 	<main class="w-[100vw] h-[100vh] bg-[#E7E7D6]">
         <section class="loader absolute z-40 h-[100vh] w-[100vw]">
